# Request-Reply

./: .gitattributes  README.md
project/: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
project/application/dto/: benchmark_dto.py  extract_features_dto.py  infer_dto.py  train_dto.py  validate_data_dto.py
project/application/use_cases/: benchmark.py  extract_features.py  infer.py  train.py  validate_data.py
project/apps/cli/: main.py
project/artifacts/: data_quality.html
project/config/: config.yaml
project/config/profiles/: high.yaml  low.yaml  medium.yaml
project/datasets/teste/: 0001.csv  0001_of_details.txt
project/domain/entities/: action_units.py  fairness.py  label.py  metrics.py  microexpressions.py  sample.py
project/domain/services/: au_extractor.py  classifier.py  embedding_extractor.py  explainer.py  face_aligner.py  facial_detector.py  fairness_auditor.py  feature_fuser.py  lighting_normalizer.py  microexpression_extractor.py  orchestrator.py  repository.py
project/infrastructure/data/: augmenters.py  loaders.py  splitters.py  validators.py  versioning.py
project/infrastructure/fairness/: audit.py  metrics.py  pipelines.py
project/infrastructure/models/: calibrators.py  fusion_attention.py  mlp.py  random_forest.py  timesformer_lite.py
project/infrastructure/persistence/: cache.py  io_parquet.py  model_registry.py
project/infrastructure/utils/: config_loader.py  errors.py  logging.py  seeds.py
project/scripts/: audit_bias.py  benchmark.py  validate.py
(+17 files in other folders)
